--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,13 +1,7 @@
 #################
-http.listener.path=v6/emp/
-app.name=emp-info-v6
-source.host=run.mocky.io
-source.port=443
-source.basepath=v3/xyz
-####################################################
-http.listener.path=v7/emp/
-app.name=emp-info-v7
-source.host=run.mocky.io
-source.port=443
-source.basepath=v3/xyz
+http.listener.path=v8
+app.name=emp-infov8
+source.host=fgj
+source.port=345
+source.basepath=fkgd
 ###################################
