--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 #################
-http.listener.path=v9
-app.name=emp-infov9
-source.host=fgj
-source.port=345
-source.basepath=fkgd
+http.listener.path=v1/data
+app.name=data1
+source.host=fk
+source.port=fj
+source.basepath=fj
 ###################################
